--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,8 +38,13 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   my_new_project:
     # Applies to all files under models/example/
-    example:
-      +materialized: table
+    # example:
+      # +materialized: table
     staging:
       +materialized: view
+    intermediate:
+      +materialized: view
+    marts:
+      +materialized: table 
+
 
