--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,8 +40,8 @@ models:
     # Applies to all files under models/example/
     # example:
       # +materialized: table
-    #staging:
-      #+materialized: view
+    staging:
+      +materialized: view
     intermediate:
       +materialized: view
     marts:
